contact details fixed

--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -115,7 +115,7 @@ h3 {
   margin: 0 auto;
   position: relative;
   padding-bottom: 20px;
-  font-family: "Alef Hebrew";
+  font-family: "Open Sans Hebrew Light";
   font-weight: 100;
   font-size: 20px;
 
