--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -347,7 +347,7 @@
                 <i
                   class="fa fa-envelope-o fa-fw w3-margin-right w3-large w3-text-teal"
                 ></i
-                >&nbsp;&nbsp; shaimanofin@gmail.com
+                >&nbsp;&nbsp; shai.manofin@gmail.com
               </p>
               <p id="time">
                 <i
