--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -56,7 +56,7 @@
     <div class="navbar-logo">
       <a
         id="logo"
-        href="https://www.google.co.il"
+        href="https://rt-cranes.onrender.com"
         title="SRC | ש.ר מנופים "
         data-height="80"
         data-padding="0"
