--- a/public/css/navBar.css
+++ b/public/css/navBar.css
@@ -15,6 +15,7 @@ html {
   max-height: 10vh;
   direction: rtl;
   width: 100%;
+  z-index: 100; /* Ensure it appears above other content */
 
 }
 
@@ -25,7 +26,6 @@ html {
   display: flex;
   align-items: center;
   justify-content: flex-start; /* Align items to the right */
-  
  
 }
 
