Fixed contact form and bugs in catalogItem file

--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -67,7 +67,7 @@
               ובזמינות גבוהה.
             </p>
           </div>
-          <a class="button" href="/operators"> למידע נוסף &gt; </a>
+          <a class="button" href="/homePage#contact-section"> למידע נוסף &gt; </a>
         </div>
 
         <div class="service-banner-item">
@@ -82,7 +82,7 @@
               שיאפשר לחברתכם להגיע לביצועים הטובים ביותר.
             </p>
           </div>
-          <a class="button" href="/cranesSale"> למידע נוסף &gt; </a>
+          <a class="button" href="/homePage#contact-section"> למידע נוסף &gt; </a>
         </div>
       </div>
     </section>
@@ -215,39 +215,39 @@
 
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/Olitsky-group-logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/Olitsky-group-logo.png" class="icon" alt="קבוצת אוליצקי" />
           </div>
         </div>
 
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/intel-logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/intel-logo.png" class="icon" alt="intel" />
           </div>
         </div>
 
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/ashdodo-port-logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/ashdodo-port-logo.png" class="icon" alt="נמל אשדוד" />
           </div>
         </div>
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/SolelBone-logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/SolelBone-logo.png" class="icon" alt="סולל בונה" />
           </div>
         </div>
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/telAviv-Logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/telAviv-Logo.png" class="icon" alt="עיריית תל אביב" />
           </div>
         </div>
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/IsraelElectric.png" class="icon" alt="דנקל" />
+            <img src="/assets/IsraelElectric.png" class="icon" alt="חברת חשמל" />
           </div>
         </div>
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/Danyacebus.png" class="icon" alt="דנקל" />
+            <img src="/assets/Danyacebus.png" class="icon" alt="דניה סיבוב" />
           </div>
         </div>
       </div>
@@ -299,7 +299,7 @@
               ובזמינות גבוהה.
             </p>
           </div>
-          <a class="button" href="/operators"> למידע נוסף &gt; </a>
+          <a class="button" href="/homePage#contact-section"> למידע נוסף &gt; </a>
         </div>
 
         <div class="service-item">
@@ -319,7 +319,7 @@
               שיאפשר לחברתכם להגיע לביצועים הטובים ביותר.
             </p>
           </div>
-          <a class="button" href="/cranesSale"> למידע נוסף &gt; </a>
+          <a class="button" href="/homePage#contact-section"> למידע נוסף &gt; </a>
         </div>
       </div>
     </section>
@@ -360,7 +360,7 @@
         </div>
         <div class="form-container">
           <h4 id="name">או השאירו הודעה ונשמח לסייע בכל שאלה</h4>
-          <form class="contact-form" action="mailto:lihisabag10@gmail.com" method="post" enctype="text/plain">
+          <form class="contact-form" action="/send-email" method="post" enctype="text/plain">
             <div class="form-group inline">
               <div class="form-group">
                 <label for="fullName">שם מלא:</label>
