--- a/views/pages/homePageEn.ejs
+++ b/views/pages/homePageEn.ejs
@@ -117,7 +117,7 @@
             <img src="/assets/GRT8100.png" alt="GRT8100" />
           </div>
           <div class="catalog-item-title">
-            <a href="/en_itemGRT8100">GRT8100</a>
+            <a href="/itemGRT8100En">GRT8100</a>
           </div>
         </div>
 
