--- a/views/pages/itemGRT8100.ejs
+++ b/views/pages/itemGRT8100.ejs
@@ -18,28 +18,28 @@
     </section>
 
     <section class="content">
-            <h2>GRT8100-1 דגם GROVE מנוף</h2>
+            <h2 style="direction: ltr;">GRT8100-1 דגם GROVE מנוף</h2>
 
       <div class="container">
         <div class="gallery">
           <div class="mySlides ">
             <div class="img-container">
-              <img src="/assets/GRT8100.png" alt="Image 1" />
+              <img src="/assets/GRT8100.png" alt="GRT8100" />
             </div>
           </div>
 
           <div class="mySlides ">
             <div class="img-container">
-              <img src="/assets/RT530E.png" alt="Image 2" />
+              <img src="/assets/GRT8100-profile.jpg" alt="GRT8100-profile" />
             </div>
           </div>
           <div class="mySlides ">
             <div class="img-container">
-              <img src="/assets/RT765E.png" alt="Image 3" />
+              <img src="/assets/GRT8100-outriggers.jpg" alt="GRT8100-outriggers" />
             </div>
           </div>
-          <a class="prev" onclick="plusSlides(-1)">❮</a>
-          <a class="next" onclick="plusSlides(1)">❯</a>
+          <a class="prev" onclick="plusSlides(-1)">❯</a>
+          <a class="next" onclick="plusSlides(1)">❮</a>
         </div>
 
         
