--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -28,7 +28,7 @@
             <i
               class="fa fa-envelope-o fa-fw w3-margin-right w3-large w3-text-teal"
             ></i>&nbsp;&nbsp;
-            shaimanofin@gmail.com
+            shai.manofin@gmail.com
           </p>
           <p id="time">
             <i
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="footer-item" id="footer-logo">
-      <a  href="https://www.google.co.il" title="SRC | ש.ר מנופים ">
+      <a  href="https://rt-cranes.onrender.com" title="SRC | ש.ר מנופים ">
         <img class="logo-main scale" src="/assets/sr-logo.png" alt="logo"
       /></a>
     </div>
