--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -129,7 +129,7 @@
     <div class="navbar-logo">
       <a
         id="logo"
-        href="https://www.google.co.il"
+        href="https://rt-cranes.onrender.com"
         title="SRC | S.R Cranes"
         data-height="80"
         data-padding="0"
