--- a/public/css/catalogItem.css
+++ b/public/css/catalogItem.css
@@ -84,13 +84,20 @@ body {
   box-shadow: 0 0 0 5px #f0f0f0;
   -webkit-box-shadow: 0 0 0 1px #fcfad6;
   -moz-box-shadow: 0 0 2 5px #f0f0f0;
- /* background-color: #3c3c3c; */
+  justify-items: center;
+  justify-content: center;
 
 }
-
+.img-container{
+  max-width: 455px;
+  height: 303px;
+  align-items: center;
+  display: flex;
+}
 /* Style for individual images */
 .gallery img {
-  width: 50%;
+  max-width: 455px;
+  
   /* height: auto; */
   transition: transform 0.5s;
 }
@@ -193,4 +200,24 @@ h2 {
 .input-box.button input:hover {
   position: static;
   background: #6c9da4;
+}
+
+@media (max-width: 768px) {
+  .content h2{
+    font-size: 24px;
+  }
+  .container .crane-details {
+    width: 100%;
+  }
+  .input-box label {
+    font-size: 16px;
+    width: 200px;
+  }
+  .crane-details .input-box input {
+    font-size: 16px;
+  }
+  .crane-details .input-box {
+    height: 32px;
+    margin: 10px 0px;
+  }
 }
