Adding a security layer to Contact form

--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -360,7 +360,7 @@
         </div>
         <div class="form-container">
           <h4 id="name">או השאירו הודעה ונשמח לסייע בכל שאלה</h4>
-          <form class="contact-form" action="/send-email" method="post" enctype="text/plain">
+          <form class="contact-form" action="https://rt-cranes.onrender.com/send-email" method="post" enctype="text/plain">
             <div class="form-group inline">
               <div class="form-group">
                 <label for="fullName">שם מלא:</label>
