--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -101,7 +101,7 @@
           </div>
 
           <div class="catalog-item-title">
-            <a href="/itemGRT8100">GRT8100</a>
+            <a href="/homePageEn">GRT8100</a>
           </div>
         </div>
 
