--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -152,10 +152,10 @@
     <div class="language-switcher" style="padding-left: 10px;
     padding-right: 15px;">
       <a onclick="switchLanguage('he')">
-        <img src="/assets/hw_icon.png" class="icon" alt="Hebrew Flag" />
+        <img src="/assets/hw_icon.png" class="icon" alt="Hebrew language" />
       </a>
       <a onclick="switchLanguage('en')">
-        <img src="/assets/en_icon.png" class="icon" alt="English Flag" />
+        <img src="/assets/en_icon.png" class="icon" alt="English language" />
       </a>
     </div>
   </div>
