--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -389,6 +389,7 @@
                 id="email"
                 name="email"
                 placeholder="*אימייל"
+                autocomplete="off"
               />
             </div>
 
