--- a/views/pages/homePageEn.ejs
+++ b/views/pages/homePageEn.ejs
@@ -438,7 +438,7 @@
           <form class="contact-form" action="/send-email" method="post">
             <div class="form-group inline">
               <div class="form-group">
-                <label>Full Name:</label>
+                <label for="fullName">Full Name :</label>
                 <input
                   type="text"
                   id="fullName"
@@ -448,7 +448,7 @@
                 />
               </div>
               <div class="form-group">
-                <label>Phone Number:</label>
+                <label for="mobile">Phone Number:</label>
                 <input
                   type="tel"
                   id="mobile"
@@ -464,11 +464,12 @@
                 id="email"
                 name="email"
                 placeholder="*Email"
+                autocomplete="off"
               />
             </div>
 
             <div class="form-group">
-              <label>Message Content:</label>
+              <label for="message">Message Content:</label>
               <textarea
                 id="message"
                 name="message"
