--- a/views/pages/homePageEn.ejs
+++ b/views/pages/homePageEn.ejs
@@ -8,7 +8,7 @@
     style="direction: ltr; font-size: 16px; font-family: 'Helvetica W01 Light'"
   >
     <section id="home-section">
-      <header><%- include('../partials/EnHeader') %></header>
+      <header><%- include('../partials/enHeader') %></header>
 
       <div class="video-container">
         <video id="myVideo" autoplay muted loop playsinline>
@@ -482,7 +482,7 @@
         </div>
       </div>
     </section>
-
+    <%- include('../partials/enFooter') %>
   </body>
   <script>
     function toggleHiddenRows() {
