--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="he">
   <head>
-    <script src="/js/jquery.min.js"></script>
+    
 
 
     <%- include('../partials/head') %>
@@ -54,7 +54,7 @@
         <div class="service-banner-item">
           <div
             class="service-banner-item-content"
-            onclick="window.location.href='/operators'"
+            onclick="window.location.href='/homePage#contact-section'"
           >
             <div class="service-banner-item-title">
               <h4>כח אדם ומפעילים</h4>
@@ -73,7 +73,7 @@
         <div class="service-banner-item">
           <div
             class="service-banner-item-content"
-            onclick="window.location.href='/cranesSale'"
+            onclick="window.location.href='/homePage#contact-section'"
           >
             <div class="service-banner-item-title"><h4>מכירת מנופים</h4></div>
             <p>
@@ -101,7 +101,7 @@
           </div>
 
           <div class="catalog-item-title">
-            <a href="/homePageEn">GRT8100</a>
+            <a href="/itemGRT8100.ejs">GRT8100</a>
           </div>
         </div>
 
