--- a/views/pages/homePageEn.ejs
+++ b/views/pages/homePageEn.ejs
@@ -64,7 +64,7 @@
         <div class="service-banner-item">
           <div
             class="service-banner-item-content eng"
-            onclick="window.location.href='/operators'"
+            onclick="window.location.href='/homePageEn#contact-section'"
           >
             <div class="service-banner-item-title">
               <h4>Manpower & Operators</h4>
@@ -72,19 +72,18 @@
 
             <p>
               The company provides professional equipment operators, including
-              heavy mechanical ,crane, excavator, bulldozer ,power shovel
-              operators and more...<br />
+              heavy mechanical ,crane, excavator, bulldozer operators and more...<br />
               Our operators are highly experienced, comply with all safety
               regulations, and are available nationwide.
             </p>
           </div>
-          <a class="button" href="/operators">Learn More &gt;</a>
+          <a class="button" href="/homePageEn#contact-section">Learn More &gt;</a>
         </div>
 
         <div class="service-banner-item">
           <div
             class="service-banner-item-content eng"
-            onclick="window.location.href='/cranesSale'"
+            onclick="window.location.href='/homePageEn#contact-section'"
           >
             <div class="service-banner-item-title">
               <h4>Cranes for Sale</h4>
@@ -98,7 +97,7 @@
               performance. <br />
             </p>
           </div>
-          <a class="button" href="/cranesSale">Learn More &gt;</a>
+          <a class="button" href="/homePageEn#contact-section">Learn More &gt;</a>
         </div>
       </div>
     </section>
@@ -187,7 +186,7 @@
           href="javascript:void(0);"
           onclick="toggleHiddenRows()"
         >
-          &lt; Show Full Catalog
+           Show Full Catalog &gt;
         </a>
       </p>
     </section>
@@ -353,11 +352,11 @@
           <button
             class="service-item-img"
             id="operator"
-            onclick="window.location.href='/operators'"
+            onclick="window.location.href='/homePageEn#contact-section'"
           ></button>
           <div
             class="service-item-content eng"
-            onclick="window.location.href='/operators'"
+            onclick="window.location.href='/homePageEn#contact-section'"
           >
             <div class="service-item-title eng">
               <h4>Manpower & Operators</h4>
@@ -370,18 +369,18 @@
               regulations, and are available nationwide.
             </p>
           </div>
-          <a class="button" href="/operators">Learn More &gt;</a>
+          <a class="button" href="/homePageEn#contact-section">Learn More &gt;</a>
         </div>
 
         <div class="service-item">
           <button
             class="service-item-img"
             id="sale"
-            onclick="window.location.href='/cranesSale'"
+            onclick="window.location.href='/homePageEn#contact-section'"
           ></button>
           <div
             class="service-item-content eng"
-            onclick="window.location.href='/cranesSale'"
+            onclick="window.location.href='/homePageEn#contact-section'"
           >
             <div class="service-item-title eng"><h4>Cranes for Sale</h4></div>
             <p>
@@ -393,7 +392,7 @@
               optimal performance.
             </p>
           </div>
-          <a class="button" href="/cranesSale">Learn More &gt;</a>
+          <a class="button" href="/homePageEn#contact-section">Learn More &gt;</a>
         </div>
       </div>
     </section>
@@ -483,6 +482,7 @@
       </div>
     </section>
     <%- include('../partials/enFooter') %>
+    <script src="https://cdn.enable.co.il/licenses/enable-L22260wfos04j6vz-0923-50759/init.js"></script>
   </body>
   <script>
     function toggleHiddenRows() {
