--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -43,7 +43,7 @@ footer {
   margin-top: 10px;
   font-size: 30px;
   font-weight: 100;
-  font-family: "Alef Hebrew";
+  font-family: "Open Sans Hebrew light";
   color: #e2c068;
   text-decoration: underline;
   line-height: 30px;
@@ -77,7 +77,7 @@ footer {
   text-decoration: none;
   color: #ffffff;
   font-size:18px;
-  font-family: "Alef Hebrew";
+  font-family:  "Open Sans Hebrew light";
   /* direction: rtl; */
   display: flex;
   margin-bottom: 10px; /* Add margin to separate each paragraph */
@@ -88,7 +88,7 @@ footer {
   margin-bottom: 10px; /* Add margin to separate each paragraph */
   font-size: 18px; /* Adjust font size as needed */
   color: #fff;
-  font-family: "Alef Hebrew";
+  font-family: "Open Sans Hebrew light";
   /* direction: rtl; */
   display: flex;
   
@@ -126,7 +126,7 @@ footer {
     margin-top: 10px;
     font-size: 18px;
     font-weight: 100;
-    font-family: "Alef Hebrew";
+    font-family: "Open Sans Hebrew light";
     color: #e2c068;
     text-decoration: underline;
     line-height: 30px;
@@ -151,7 +151,7 @@ footer {
     margin-bottom: 10px; /* Add margin to separate each paragraph */
     font-size: 14px; /* Adjust font size as needed */
     color: #fff;
-    font-family: "Alef Hebrew";
+    font-family: "Open Sans Hebrew light";
     display: flex;
     /* direction: rtl; */ 
     font-size: 16px;
@@ -165,7 +165,7 @@ footer {
     text-decoration: none;
     color: #ffffff;
     font-size:16px;
-    font-family: "Alef Hebrew";
+    font-family: "Open Sans Hebrew light";
     /* direction: rtl; */
     display: flex;
     margin-bottom: 10px; /* Add margin to separate each paragraph */
@@ -183,7 +183,7 @@ footer {
   margin-bottom: 10px; /* Add margin to separate each paragraph */
   font-size: 14px; /* Adjust font size as needed */
   color: #fff;
-  font-family: "Alef Hebrew";
+  font-family: "Open Sans Hebrew light";
   display: flex;
   /* direction: rtl; */ 
   font-size: 16px;
@@ -227,7 +227,7 @@ footer {
     margin-top: 10px;
     font-size: 16px;
     font-weight: 100;
-    font-family: "Alef Hebrew";
+    font-family: "Open Sans Hebrew light";
     color: #e2c068;
     text-decoration: underline;
     line-height: 30px;
@@ -252,7 +252,7 @@ footer {
     margin-bottom: 10px; /* Add margin to separate each paragraph */
     font-size: 14px; /* Adjust font size as needed */
     color: #fff;
-    font-family: "Alef Hebrew";
+    font-family: "Open Sans Hebrew light";
     display: flex;
     /* direction: rtl; */ 
     min-width: 230px;
@@ -265,7 +265,7 @@ footer {
     text-decoration: none;
     color: #ffffff;
     font-size:14px;
-    font-family: "Alef Hebrew";
+    font-family: "Open Sans Hebrew light";
     /* direction: rtl; */
     display: flex;
   
