--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -333,27 +333,24 @@
             <ul id="menu" class="menu">
               <p id="city">
                 <i
-                  class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"
+                  class="fa fa-home fa-fw "
                 ></i
                 >&nbsp;&nbsp; אשדוד , רוגוזין 9
               </p>
               <p id="phone">
                 <i
-                  class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"
+                  class="fa fa-phone fa-fw "
                 ></i
                 >&nbsp;&nbsp; 050-9088120
               </p>
               <p>
                 <i
-                  class="fa fa-envelope-o fa-fw w3-margin-right w3-large w3-text-teal"
+                  class="fa fa-envelope fa-fw "
                 ></i
                 >&nbsp;&nbsp; shai.manofin@gmail.com
               </p>
               <p id="time">
-                <i
-                  class="fa fa-clock-o fa-fw w3-margin-right w3-large w3-text-teal"
-                ></i
-                >&nbsp;&nbsp; א'-ה', 8:00 - 19:00
+                <i class="fa-solid fa-clock"></i>&nbsp;&nbsp; א'-ה', 8:00 - 19:00
               </p>
             </ul>
           </div>
