--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -350,7 +350,10 @@
                 >&nbsp;&nbsp; shai.manofin@gmail.com
               </p>
               <p id="time">
-                <i class="fa-solid fa-clock"></i>&nbsp;&nbsp; א'-ה', 8:00 - 19:00
+                <i
+                  class="fa fa-clock-o fa-fw " 
+                ></i
+                >&nbsp;&nbsp; א'-ה', 8:00 - 19:00
               </p>
             </ul>
           </div>
