added logs for send-email

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -18,109 +18,106 @@
       </div>
     </div>
 
-    
+
     <div class="banner">
       <div class="content">
-        <h1>
-        ש.ר  
-           שירותי מנוף
-        </h1>
-        <h3>
-          השכרת מנופים איכותיים ומקצועיים, בהתאמה מלאה לפרויקט שלכם
-        </h3>
+        <h1>ש.ר שירותי מנוף</h1>
+        <h3>השכרת מנופים איכותיים ומקצועיים, בהתאמה מלאה לפרויקט שלכם</h3>
       </div>
-    </div> 
+    </div>
 
     <!-- --About section start---->
     <section class="about">
-
       <div class="main">
-    <div class="slideshow-container">
-        <div class="mySlides fade">
-          <div class="about-container">
-            <h5>אודותינו</h5>
-            <P
-              >אנו מציעים שירות של השכרת מנופים איכותיים ומקצועיים, בהתאמה מלאה לפרויקט שלכם, עם אפשרות להעמדת מפעיל לימי עבודה לבחירתכם.
-
-              בכל השכרה אנחנו בוחנים ביחד איתכם את הצורך ואת הפרויקט, הסביבה והדרישות בהתאם למבנה ולשטח - על מנת לבחור את הפתרון המתאים ביותר עבורכם.
-              
-              בצי שלנו יש מגוון מנופי RT להשכרה, מוזמנים ליצור קשר לפרטים נוספים וקבלת הצעת מחיר.
-            </P>
+        <div class="slideshow-container">
+          <div class="mySlides fade">
+            <div class="about-container">
+              <h5>אודותינו</h5>
+              <P
+                >אנו מציעים שירות של השכרת מנופים איכותיים ומקצועיים, בהתאמה
+                מלאה לפרויקט שלכם, עם אפשרות להעמדת מפעיל לימי עבודה לבחירתכם.
+                בכל השכרה אנחנו בוחנים ביחד איתכם את הצורך ואת הפרויקט, הסביבה
+                והדרישות בהתאם למבנה ולשטח - על מנת לבחור את הפתרון המתאים ביותר
+                עבורכם. בצי שלנו יש מגוון מנופי RT להשכרה, מוזמנים ליצור קשר
+                לפרטים נוספים וקבלת הצעת מחיר.
+              </P>
+            </div>
           </div>
-        </div>
 
-        <div class="mySlides fade">
-          <div class="about-container">
-            <h5>Guided by our principals</h5>
-            <P
-              >אנו רואים בחזון שלנו שיפור משמעותי ועלייה ברמה וביכולות של חברות הקידוח בארץ, שיפור בציוד, גידול ברווחיות ובעשייה, דרך עבודה בסטנדרטים הבינלאומיים הטובים ביותר ותוך התאמת השיטות והכלים לתנאים בשטח ותנאי הקרקע במדינת ישראל.
-            </P>
+          <div class="mySlides fade">
+            <div class="about-container">
+              <h5>Guided by our principals</h5>
+              <P
+                >אנו רואים בחזון שלנו שיפור משמעותי ועלייה ברמה וביכולות של
+                חברות הקידוח בארץ, שיפור בציוד, גידול ברווחיות ובעשייה, דרך
+                עבודה בסטנדרטים הבינלאומיים הטובים ביותר ותוך התאמת השיטות
+                והכלים לתנאים בשטח ותנאי הקרקע במדינת ישראל.
+              </P>
+            </div>
           </div>
+          <a class="prev" onclick="plusSlides(-1)">❮</a>
+          <a class="next" onclick="plusSlides(1)">❯</a>
         </div>
-        <a class="prev" onclick="plusSlides(-1)">❮</a>
-        <a class="next" onclick="plusSlides(1)">❯</a>
-      </div> 
       </div>
- </section>
+    </section>
     <!-----service section start----------->
-   <section class="service-container"> 
-   <div class="service">
-      <div class="title">
-        <h2>Our Services</h2>
+    <section class="service-container">
+      <div class="service">
+        <div class="title">
+          <h2>Our Services</h2>
+        </div>
+
+        <div class="services-box">
+          <div class="service-card">
+            <i class="fas fa-bars"></i>
+            <h5>Grow your membership</h5>
+            <div class="pra">
+              <p>
+                Give your members the ability to check your schedule, book
+                in-person classes, and view their registrations wherever they
+                are.
+              </p>
+              <p style="text-align: center">
+                <a class="button" href="/aboutUs">Read More</a>
+              </p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <i class="far fa-user"></i>
+            <h5>Organize your schedule</h5>
+            <div class="pra">
+              <p>
+                Auto-adjust for time zones, let clients easily cancel &
+                reschedule themselves, and send automated reminders to keep
+                clients prompt.
+              </p>
+
+              <p style="text-align: center">
+                <a class="button" href="/aboutUs">Read More</a>
+              </p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <i class="far fa-bell"></i>
+            <h5>Manage your clients</h5>
+            <div class="pra">
+              <p>
+                Everything you need in one place. Easily keep track of your
+                clients' information including their bookings, payments and
+                progress.
+              </p>
+              <p style="text-align: center">
+                <a class="button" href="/aboutUs">Read More</a>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <div class="services-box">
-        <div class="service-card">
-          <i class="fas fa-bars"></i>
-          <h5>Grow your membership</h5>
-          <div class="pra">
-            <p>
-              Give your members the ability to check your schedule, book
-              in-person classes, and view their registrations wherever they are.
-            </p>
-            <p style="text-align: center">
-              <a class="button" href="/aboutUs">Read More</a>
-            </p>
-          </div>
-        </div>
-
-        <div class="service-card">
-          <i class="far fa-user"></i>
-          <h5>Organize your schedule</h5>
-          <div class="pra">
-            <p>
-              Auto-adjust for time zones, let clients easily cancel & reschedule
-              themselves, and send automated reminders to keep clients prompt.
-            </p>
-
-            <p style="text-align: center">
-              <a class="button" href="/aboutUs">Read More</a>
-            </p>
-          </div>
-        </div>
-
-        <div class="service-card">
-          <i class="far fa-bell"></i>
-          <h5>Manage your clients</h5>
-          <div class="pra">
-            <p>
-              Everything you need in one place. Easily keep track of your
-              clients' information including their bookings, payments and
-              progress.
-            </p>
-            <p style="text-align: center">
-              <a class="button" href="/aboutUs">Read More</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
- 
-  </section>
-  
+    </section>
   </body>
   <script>
-    
     let slideIndex = 1;
     showSlides(slideIndex);
     // Next/previous controls
@@ -147,6 +144,4 @@
       slides[slideIndex - 1].style.display = "block";
     }
   </script>
-
-  
 </html>
